parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> NULO PRINCIPAL ( ) { codigo }
Rule 2     codigo -> dec_variavel comando
Rule 3     dec_variavel -> salva_variavel ; dec_variavel
Rule 4     dec_variavel -> vazio
Rule 5     salva_variavel -> tipo lista_nomes
Rule 6     lista_nomes -> NAME lista_n
Rule 7     lista_n -> , NAME lista_n
Rule 8     lista_n -> vazio
Rule 9     dec_variavel -> tipo error ;
Rule 10    tipo -> INTEIRO
Rule 11    tipo -> REAL
Rule 12    tipo -> CHAR
Rule 13    comando -> comando_se comando
Rule 14    comando -> comando_enquanto comando
Rule 15    comando -> comando_atribuicao comando
Rule 16    comando -> comando_entrada comando
Rule 17    comando -> comando_saida comando
Rule 18    comando -> vazio
Rule 19    comando_se -> SE ( expressao ) { comando } senao
Rule 20    senao -> SENAO { comando }
Rule 21    senao -> vazio
Rule 22    comando_enquanto -> ENQUANTO ( expressao ) { comando }
Rule 23    comando_atribuicao -> name = expressao ;
Rule 24    expressao -> expressao + expressao
Rule 25    expressao -> expressao - expressao
Rule 26    expressao -> expressao * expressao
Rule 27    expressao -> expressao / expressao
Rule 28    expressao -> expressao > expressao
Rule 29    expressao -> expressao < expressao
Rule 30    expressao -> expressao IGUAL expressao
Rule 31    expressao -> expressao MAIORIGUAL expressao
Rule 32    expressao -> expressao MENORIGUAL expressao
Rule 33    expressao -> expressao DIFERENTE expressao
Rule 34    expressao -> expressao ELOGICO expressao
Rule 35    expressao -> expressao OULOGICO expressao
Rule 36    expressao -> ( expressao )
Rule 37    expressao -> ! expressao
Rule 38    expressao -> INTEIRO
Rule 39    expressao -> REAL
Rule 40    expressao -> CHAR
Rule 41    expressao -> name
Rule 42    expressao -> - expressao
Rule 43    name -> NAME
Rule 44    comando_entrada -> LER ( NAME ) ;
Rule 45    comando_saida -> ESCREVER ( CHAR ) ;
Rule 46    comando_saida -> ESCREVER ( expressao ) ;
Rule 47    comando_saida -> ESCREVER ( name ) ;
Rule 48    vazio -> <empty>

Terminals, with rules where they appear

!                    : 37
(                    : 1 19 22 36 44 45 46 47
)                    : 1 19 22 36 44 45 46 47
*                    : 26
+                    : 24
,                    : 7
-                    : 25 42
/                    : 27
;                    : 3 9 23 44 45 46 47
<                    : 29
=                    : 23
>                    : 28
CHAR                 : 12 40 45
DIFERENTE            : 33
ELOGICO              : 34
ENQUANTO             : 22
ESCREVER             : 45 46 47
IGUAL                : 30
INTEIRO              : 10 38
LER                  : 44
MAIORIGUAL           : 31
MENORIGUAL           : 32
NAME                 : 6 7 43 44
NULO                 : 1
OULOGICO             : 35
PRINCIPAL            : 1
REAL                 : 11 39
SE                   : 19
SENAO                : 20
error                : 9
{                    : 1 19 20 22
}                    : 1 19 20 22

Nonterminals, with rules where they appear

codigo               : 1
comando              : 2 13 14 15 16 17 19 20 22
comando_atribuicao   : 15
comando_enquanto     : 14
comando_entrada      : 16
comando_saida        : 17
comando_se           : 13
dec_variavel         : 2 3
expressao            : 19 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 42 46
lista_n              : 6 7
lista_nomes          : 5
name                 : 23 41 47
programa             : 0
salva_variavel       : 3
senao                : 19
tipo                 : 5 9
vazio                : 4 8 18 21

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . NULO PRINCIPAL ( ) { codigo }

    NULO            shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> NULO . PRINCIPAL ( ) { codigo }

    PRINCIPAL       shift and go to state 3


state 3

    (1) programa -> NULO PRINCIPAL . ( ) { codigo }

    (               shift and go to state 4


state 4

    (1) programa -> NULO PRINCIPAL ( . ) { codigo }

    )               shift and go to state 5


state 5

    (1) programa -> NULO PRINCIPAL ( ) . { codigo }

    {               shift and go to state 6


state 6

    (1) programa -> NULO PRINCIPAL ( ) { . codigo }
    (2) codigo -> . dec_variavel comando
    (3) dec_variavel -> . salva_variavel ; dec_variavel
    (4) dec_variavel -> . vazio
    (9) dec_variavel -> . tipo error ;
    (5) salva_variavel -> . tipo lista_nomes
    (48) vazio -> .
    (10) tipo -> . INTEIRO
    (11) tipo -> . REAL
    (12) tipo -> . CHAR

    SE              reduce using rule 48 (vazio -> .)
    ENQUANTO        reduce using rule 48 (vazio -> .)
    LER             reduce using rule 48 (vazio -> .)
    ESCREVER        reduce using rule 48 (vazio -> .)
    NAME            reduce using rule 48 (vazio -> .)
    }               reduce using rule 48 (vazio -> .)
    INTEIRO         shift and go to state 12
    REAL            shift and go to state 13
    CHAR            shift and go to state 14

    codigo                         shift and go to state 7
    dec_variavel                   shift and go to state 8
    salva_variavel                 shift and go to state 9
    vazio                          shift and go to state 10
    tipo                           shift and go to state 11

state 7

    (1) programa -> NULO PRINCIPAL ( ) { codigo . }

    }               shift and go to state 15


state 8

    (2) codigo -> dec_variavel . comando
    (13) comando -> . comando_se comando
    (14) comando -> . comando_enquanto comando
    (15) comando -> . comando_atribuicao comando
    (16) comando -> . comando_entrada comando
    (17) comando -> . comando_saida comando
    (18) comando -> . vazio
    (19) comando_se -> . SE ( expressao ) { comando } senao
    (22) comando_enquanto -> . ENQUANTO ( expressao ) { comando }
    (23) comando_atribuicao -> . name = expressao ;
    (44) comando_entrada -> . LER ( NAME ) ;
    (45) comando_saida -> . ESCREVER ( CHAR ) ;
    (46) comando_saida -> . ESCREVER ( expressao ) ;
    (47) comando_saida -> . ESCREVER ( name ) ;
    (48) vazio -> .
    (43) name -> . NAME

    SE              shift and go to state 23
    ENQUANTO        shift and go to state 24
    LER             shift and go to state 26
    ESCREVER        shift and go to state 28
    }               reduce using rule 48 (vazio -> .)
    NAME            shift and go to state 27

    comando                        shift and go to state 16
    comando_se                     shift and go to state 17
    comando_enquanto               shift and go to state 18
    comando_atribuicao             shift and go to state 19
    comando_entrada                shift and go to state 20
    comando_saida                  shift and go to state 21
    vazio                          shift and go to state 22
    name                           shift and go to state 25

state 9

    (3) dec_variavel -> salva_variavel . ; dec_variavel

    ;               shift and go to state 29


state 10

    (4) dec_variavel -> vazio .

    SE              reduce using rule 4 (dec_variavel -> vazio .)
    ENQUANTO        reduce using rule 4 (dec_variavel -> vazio .)
    LER             reduce using rule 4 (dec_variavel -> vazio .)
    ESCREVER        reduce using rule 4 (dec_variavel -> vazio .)
    NAME            reduce using rule 4 (dec_variavel -> vazio .)
    }               reduce using rule 4 (dec_variavel -> vazio .)


state 11

    (9) dec_variavel -> tipo . error ;
    (5) salva_variavel -> tipo . lista_nomes
    (6) lista_nomes -> . NAME lista_n

    error           shift and go to state 30
    NAME            shift and go to state 32

    lista_nomes                    shift and go to state 31

state 12

    (10) tipo -> INTEIRO .

    error           reduce using rule 10 (tipo -> INTEIRO .)
    NAME            reduce using rule 10 (tipo -> INTEIRO .)


state 13

    (11) tipo -> REAL .

    error           reduce using rule 11 (tipo -> REAL .)
    NAME            reduce using rule 11 (tipo -> REAL .)


state 14

    (12) tipo -> CHAR .

    error           reduce using rule 12 (tipo -> CHAR .)
    NAME            reduce using rule 12 (tipo -> CHAR .)


state 15

    (1) programa -> NULO PRINCIPAL ( ) { codigo } .

    $end            reduce using rule 1 (programa -> NULO PRINCIPAL ( ) { codigo } .)


state 16

    (2) codigo -> dec_variavel comando .

    }               reduce using rule 2 (codigo -> dec_variavel comando .)


state 17

    (13) comando -> comando_se . comando
    (13) comando -> . comando_se comando
    (14) comando -> . comando_enquanto comando
    (15) comando -> . comando_atribuicao comando
    (16) comando -> . comando_entrada comando
    (17) comando -> . comando_saida comando
    (18) comando -> . vazio
    (19) comando_se -> . SE ( expressao ) { comando } senao
    (22) comando_enquanto -> . ENQUANTO ( expressao ) { comando }
    (23) comando_atribuicao -> . name = expressao ;
    (44) comando_entrada -> . LER ( NAME ) ;
    (45) comando_saida -> . ESCREVER ( CHAR ) ;
    (46) comando_saida -> . ESCREVER ( expressao ) ;
    (47) comando_saida -> . ESCREVER ( name ) ;
    (48) vazio -> .
    (43) name -> . NAME

    SE              shift and go to state 23
    ENQUANTO        shift and go to state 24
    LER             shift and go to state 26
    ESCREVER        shift and go to state 28
    }               reduce using rule 48 (vazio -> .)
    NAME            shift and go to state 27

    comando_se                     shift and go to state 17
    comando                        shift and go to state 33
    comando_enquanto               shift and go to state 18
    comando_atribuicao             shift and go to state 19
    comando_entrada                shift and go to state 20
    comando_saida                  shift and go to state 21
    vazio                          shift and go to state 22
    name                           shift and go to state 25

state 18

    (14) comando -> comando_enquanto . comando
    (13) comando -> . comando_se comando
    (14) comando -> . comando_enquanto comando
    (15) comando -> . comando_atribuicao comando
    (16) comando -> . comando_entrada comando
    (17) comando -> . comando_saida comando
    (18) comando -> . vazio
    (19) comando_se -> . SE ( expressao ) { comando } senao
    (22) comando_enquanto -> . ENQUANTO ( expressao ) { comando }
    (23) comando_atribuicao -> . name = expressao ;
    (44) comando_entrada -> . LER ( NAME ) ;
    (45) comando_saida -> . ESCREVER ( CHAR ) ;
    (46) comando_saida -> . ESCREVER ( expressao ) ;
    (47) comando_saida -> . ESCREVER ( name ) ;
    (48) vazio -> .
    (43) name -> . NAME

    SE              shift and go to state 23
    ENQUANTO        shift and go to state 24
    LER             shift and go to state 26
    ESCREVER        shift and go to state 28
    }               reduce using rule 48 (vazio -> .)
    NAME            shift and go to state 27

    comando_enquanto               shift and go to state 18
    comando                        shift and go to state 34
    comando_se                     shift and go to state 17
    comando_atribuicao             shift and go to state 19
    comando_entrada                shift and go to state 20
    comando_saida                  shift and go to state 21
    vazio                          shift and go to state 22
    name                           shift and go to state 25

state 19

    (15) comando -> comando_atribuicao . comando
    (13) comando -> . comando_se comando
    (14) comando -> . comando_enquanto comando
    (15) comando -> . comando_atribuicao comando
    (16) comando -> . comando_entrada comando
    (17) comando -> . comando_saida comando
    (18) comando -> . vazio
    (19) comando_se -> . SE ( expressao ) { comando } senao
    (22) comando_enquanto -> . ENQUANTO ( expressao ) { comando }
    (23) comando_atribuicao -> . name = expressao ;
    (44) comando_entrada -> . LER ( NAME ) ;
    (45) comando_saida -> . ESCREVER ( CHAR ) ;
    (46) comando_saida -> . ESCREVER ( expressao ) ;
    (47) comando_saida -> . ESCREVER ( name ) ;
    (48) vazio -> .
    (43) name -> . NAME

    SE              shift and go to state 23
    ENQUANTO        shift and go to state 24
    LER             shift and go to state 26
    ESCREVER        shift and go to state 28
    }               reduce using rule 48 (vazio -> .)
    NAME            shift and go to state 27

    comando_atribuicao             shift and go to state 19
    comando                        shift and go to state 35
    comando_se                     shift and go to state 17
    comando_enquanto               shift and go to state 18
    comando_entrada                shift and go to state 20
    comando_saida                  shift and go to state 21
    vazio                          shift and go to state 22
    name                           shift and go to state 25

state 20

    (16) comando -> comando_entrada . comando
    (13) comando -> . comando_se comando
    (14) comando -> . comando_enquanto comando
    (15) comando -> . comando_atribuicao comando
    (16) comando -> . comando_entrada comando
    (17) comando -> . comando_saida comando
    (18) comando -> . vazio
    (19) comando_se -> . SE ( expressao ) { comando } senao
    (22) comando_enquanto -> . ENQUANTO ( expressao ) { comando }
    (23) comando_atribuicao -> . name = expressao ;
    (44) comando_entrada -> . LER ( NAME ) ;
    (45) comando_saida -> . ESCREVER ( CHAR ) ;
    (46) comando_saida -> . ESCREVER ( expressao ) ;
    (47) comando_saida -> . ESCREVER ( name ) ;
    (48) vazio -> .
    (43) name -> . NAME

    SE              shift and go to state 23
    ENQUANTO        shift and go to state 24
    LER             shift and go to state 26
    ESCREVER        shift and go to state 28
    }               reduce using rule 48 (vazio -> .)
    NAME            shift and go to state 27

    comando_entrada                shift and go to state 20
    comando                        shift and go to state 36
    comando_se                     shift and go to state 17
    comando_enquanto               shift and go to state 18
    comando_atribuicao             shift and go to state 19
    comando_saida                  shift and go to state 21
    vazio                          shift and go to state 22
    name                           shift and go to state 25

state 21

    (17) comando -> comando_saida . comando
    (13) comando -> . comando_se comando
    (14) comando -> . comando_enquanto comando
    (15) comando -> . comando_atribuicao comando
    (16) comando -> . comando_entrada comando
    (17) comando -> . comando_saida comando
    (18) comando -> . vazio
    (19) comando_se -> . SE ( expressao ) { comando } senao
    (22) comando_enquanto -> . ENQUANTO ( expressao ) { comando }
    (23) comando_atribuicao -> . name = expressao ;
    (44) comando_entrada -> . LER ( NAME ) ;
    (45) comando_saida -> . ESCREVER ( CHAR ) ;
    (46) comando_saida -> . ESCREVER ( expressao ) ;
    (47) comando_saida -> . ESCREVER ( name ) ;
    (48) vazio -> .
    (43) name -> . NAME

    SE              shift and go to state 23
    ENQUANTO        shift and go to state 24
    LER             shift and go to state 26
    ESCREVER        shift and go to state 28
    }               reduce using rule 48 (vazio -> .)
    NAME            shift and go to state 27

    comando_saida                  shift and go to state 21
    comando                        shift and go to state 37
    comando_se                     shift and go to state 17
    comando_enquanto               shift and go to state 18
    comando_atribuicao             shift and go to state 19
    comando_entrada                shift and go to state 20
    vazio                          shift and go to state 22
    name                           shift and go to state 25

state 22

    (18) comando -> vazio .

    }               reduce using rule 18 (comando -> vazio .)


state 23

    (19) comando_se -> SE . ( expressao ) { comando } senao

    (               shift and go to state 38


state 24

    (22) comando_enquanto -> ENQUANTO . ( expressao ) { comando }

    (               shift and go to state 39


state 25

    (23) comando_atribuicao -> name . = expressao ;

    =               shift and go to state 40


state 26

    (44) comando_entrada -> LER . ( NAME ) ;

    (               shift and go to state 41


state 27

    (43) name -> NAME .

    =               reduce using rule 43 (name -> NAME .)
    )               reduce using rule 43 (name -> NAME .)
    +               reduce using rule 43 (name -> NAME .)
    -               reduce using rule 43 (name -> NAME .)
    *               reduce using rule 43 (name -> NAME .)
    /               reduce using rule 43 (name -> NAME .)
    >               reduce using rule 43 (name -> NAME .)
    <               reduce using rule 43 (name -> NAME .)
    IGUAL           reduce using rule 43 (name -> NAME .)
    MAIORIGUAL      reduce using rule 43 (name -> NAME .)
    MENORIGUAL      reduce using rule 43 (name -> NAME .)
    DIFERENTE       reduce using rule 43 (name -> NAME .)
    ELOGICO         reduce using rule 43 (name -> NAME .)
    OULOGICO        reduce using rule 43 (name -> NAME .)
    ;               reduce using rule 43 (name -> NAME .)


state 28

    (45) comando_saida -> ESCREVER . ( CHAR ) ;
    (46) comando_saida -> ESCREVER . ( expressao ) ;
    (47) comando_saida -> ESCREVER . ( name ) ;

    (               shift and go to state 42


state 29

    (3) dec_variavel -> salva_variavel ; . dec_variavel
    (3) dec_variavel -> . salva_variavel ; dec_variavel
    (4) dec_variavel -> . vazio
    (9) dec_variavel -> . tipo error ;
    (5) salva_variavel -> . tipo lista_nomes
    (48) vazio -> .
    (10) tipo -> . INTEIRO
    (11) tipo -> . REAL
    (12) tipo -> . CHAR

    SE              reduce using rule 48 (vazio -> .)
    ENQUANTO        reduce using rule 48 (vazio -> .)
    LER             reduce using rule 48 (vazio -> .)
    ESCREVER        reduce using rule 48 (vazio -> .)
    NAME            reduce using rule 48 (vazio -> .)
    }               reduce using rule 48 (vazio -> .)
    INTEIRO         shift and go to state 12
    REAL            shift and go to state 13
    CHAR            shift and go to state 14

    salva_variavel                 shift and go to state 9
    dec_variavel                   shift and go to state 43
    vazio                          shift and go to state 10
    tipo                           shift and go to state 11

state 30

    (9) dec_variavel -> tipo error . ;

    ;               shift and go to state 44


state 31

    (5) salva_variavel -> tipo lista_nomes .

    ;               reduce using rule 5 (salva_variavel -> tipo lista_nomes .)


state 32

    (6) lista_nomes -> NAME . lista_n
    (7) lista_n -> . , NAME lista_n
    (8) lista_n -> . vazio
    (48) vazio -> .

    ,               shift and go to state 46
    ;               reduce using rule 48 (vazio -> .)

    lista_n                        shift and go to state 45
    vazio                          shift and go to state 47

state 33

    (13) comando -> comando_se comando .

    }               reduce using rule 13 (comando -> comando_se comando .)


state 34

    (14) comando -> comando_enquanto comando .

    }               reduce using rule 14 (comando -> comando_enquanto comando .)


state 35

    (15) comando -> comando_atribuicao comando .

    }               reduce using rule 15 (comando -> comando_atribuicao comando .)


state 36

    (16) comando -> comando_entrada comando .

    }               reduce using rule 16 (comando -> comando_entrada comando .)


state 37

    (17) comando -> comando_saida comando .

    }               reduce using rule 17 (comando -> comando_saida comando .)


state 38

    (19) comando_se -> SE ( . expressao ) { comando } senao
    (24) expressao -> . expressao + expressao
    (25) expressao -> . expressao - expressao
    (26) expressao -> . expressao * expressao
    (27) expressao -> . expressao / expressao
    (28) expressao -> . expressao > expressao
    (29) expressao -> . expressao < expressao
    (30) expressao -> . expressao IGUAL expressao
    (31) expressao -> . expressao MAIORIGUAL expressao
    (32) expressao -> . expressao MENORIGUAL expressao
    (33) expressao -> . expressao DIFERENTE expressao
    (34) expressao -> . expressao ELOGICO expressao
    (35) expressao -> . expressao OULOGICO expressao
    (36) expressao -> . ( expressao )
    (37) expressao -> . ! expressao
    (38) expressao -> . INTEIRO
    (39) expressao -> . REAL
    (40) expressao -> . CHAR
    (41) expressao -> . name
    (42) expressao -> . - expressao
    (43) name -> . NAME

    (               shift and go to state 48
    !               shift and go to state 51
    INTEIRO         shift and go to state 52
    REAL            shift and go to state 53
    CHAR            shift and go to state 54
    -               shift and go to state 50
    NAME            shift and go to state 27

    expressao                      shift and go to state 49
    name                           shift and go to state 55

state 39

    (22) comando_enquanto -> ENQUANTO ( . expressao ) { comando }
    (24) expressao -> . expressao + expressao
    (25) expressao -> . expressao - expressao
    (26) expressao -> . expressao * expressao
    (27) expressao -> . expressao / expressao
    (28) expressao -> . expressao > expressao
    (29) expressao -> . expressao < expressao
    (30) expressao -> . expressao IGUAL expressao
    (31) expressao -> . expressao MAIORIGUAL expressao
    (32) expressao -> . expressao MENORIGUAL expressao
    (33) expressao -> . expressao DIFERENTE expressao
    (34) expressao -> . expressao ELOGICO expressao
    (35) expressao -> . expressao OULOGICO expressao
    (36) expressao -> . ( expressao )
    (37) expressao -> . ! expressao
    (38) expressao -> . INTEIRO
    (39) expressao -> . REAL
    (40) expressao -> . CHAR
    (41) expressao -> . name
    (42) expressao -> . - expressao
    (43) name -> . NAME

    (               shift and go to state 48
    !               shift and go to state 51
    INTEIRO         shift and go to state 52
    REAL            shift and go to state 53
    CHAR            shift and go to state 54
    -               shift and go to state 50
    NAME            shift and go to state 27

    expressao                      shift and go to state 56
    name                           shift and go to state 55

state 40

    (23) comando_atribuicao -> name = . expressao ;
    (24) expressao -> . expressao + expressao
    (25) expressao -> . expressao - expressao
    (26) expressao -> . expressao * expressao
    (27) expressao -> . expressao / expressao
    (28) expressao -> . expressao > expressao
    (29) expressao -> . expressao < expressao
    (30) expressao -> . expressao IGUAL expressao
    (31) expressao -> . expressao MAIORIGUAL expressao
    (32) expressao -> . expressao MENORIGUAL expressao
    (33) expressao -> . expressao DIFERENTE expressao
    (34) expressao -> . expressao ELOGICO expressao
    (35) expressao -> . expressao OULOGICO expressao
    (36) expressao -> . ( expressao )
    (37) expressao -> . ! expressao
    (38) expressao -> . INTEIRO
    (39) expressao -> . REAL
    (40) expressao -> . CHAR
    (41) expressao -> . name
    (42) expressao -> . - expressao
    (43) name -> . NAME

    (               shift and go to state 48
    !               shift and go to state 51
    INTEIRO         shift and go to state 52
    REAL            shift and go to state 53
    CHAR            shift and go to state 54
    -               shift and go to state 50
    NAME            shift and go to state 27

    name                           shift and go to state 55
    expressao                      shift and go to state 57

state 41

    (44) comando_entrada -> LER ( . NAME ) ;

    NAME            shift and go to state 58


state 42

    (45) comando_saida -> ESCREVER ( . CHAR ) ;
    (46) comando_saida -> ESCREVER ( . expressao ) ;
    (47) comando_saida -> ESCREVER ( . name ) ;
    (24) expressao -> . expressao + expressao
    (25) expressao -> . expressao - expressao
    (26) expressao -> . expressao * expressao
    (27) expressao -> . expressao / expressao
    (28) expressao -> . expressao > expressao
    (29) expressao -> . expressao < expressao
    (30) expressao -> . expressao IGUAL expressao
    (31) expressao -> . expressao MAIORIGUAL expressao
    (32) expressao -> . expressao MENORIGUAL expressao
    (33) expressao -> . expressao DIFERENTE expressao
    (34) expressao -> . expressao ELOGICO expressao
    (35) expressao -> . expressao OULOGICO expressao
    (36) expressao -> . ( expressao )
    (37) expressao -> . ! expressao
    (38) expressao -> . INTEIRO
    (39) expressao -> . REAL
    (40) expressao -> . CHAR
    (41) expressao -> . name
    (42) expressao -> . - expressao
    (43) name -> . NAME

    CHAR            shift and go to state 59
    (               shift and go to state 48
    !               shift and go to state 51
    INTEIRO         shift and go to state 52
    REAL            shift and go to state 53
    -               shift and go to state 50
    NAME            shift and go to state 27

    expressao                      shift and go to state 60
    name                           shift and go to state 61

state 43

    (3) dec_variavel -> salva_variavel ; dec_variavel .

    SE              reduce using rule 3 (dec_variavel -> salva_variavel ; dec_variavel .)
    ENQUANTO        reduce using rule 3 (dec_variavel -> salva_variavel ; dec_variavel .)
    LER             reduce using rule 3 (dec_variavel -> salva_variavel ; dec_variavel .)
    ESCREVER        reduce using rule 3 (dec_variavel -> salva_variavel ; dec_variavel .)
    NAME            reduce using rule 3 (dec_variavel -> salva_variavel ; dec_variavel .)
    }               reduce using rule 3 (dec_variavel -> salva_variavel ; dec_variavel .)


state 44

    (9) dec_variavel -> tipo error ; .

    SE              reduce using rule 9 (dec_variavel -> tipo error ; .)
    ENQUANTO        reduce using rule 9 (dec_variavel -> tipo error ; .)
    LER             reduce using rule 9 (dec_variavel -> tipo error ; .)
    ESCREVER        reduce using rule 9 (dec_variavel -> tipo error ; .)
    NAME            reduce using rule 9 (dec_variavel -> tipo error ; .)
    }               reduce using rule 9 (dec_variavel -> tipo error ; .)


state 45

    (6) lista_nomes -> NAME lista_n .

    ;               reduce using rule 6 (lista_nomes -> NAME lista_n .)


state 46

    (7) lista_n -> , . NAME lista_n

    NAME            shift and go to state 62


state 47

    (8) lista_n -> vazio .

    ;               reduce using rule 8 (lista_n -> vazio .)


state 48

    (36) expressao -> ( . expressao )
    (24) expressao -> . expressao + expressao
    (25) expressao -> . expressao - expressao
    (26) expressao -> . expressao * expressao
    (27) expressao -> . expressao / expressao
    (28) expressao -> . expressao > expressao
    (29) expressao -> . expressao < expressao
    (30) expressao -> . expressao IGUAL expressao
    (31) expressao -> . expressao MAIORIGUAL expressao
    (32) expressao -> . expressao MENORIGUAL expressao
    (33) expressao -> . expressao DIFERENTE expressao
    (34) expressao -> . expressao ELOGICO expressao
    (35) expressao -> . expressao OULOGICO expressao
    (36) expressao -> . ( expressao )
    (37) expressao -> . ! expressao
    (38) expressao -> . INTEIRO
    (39) expressao -> . REAL
    (40) expressao -> . CHAR
    (41) expressao -> . name
    (42) expressao -> . - expressao
    (43) name -> . NAME

    (               shift and go to state 48
    !               shift and go to state 51
    INTEIRO         shift and go to state 52
    REAL            shift and go to state 53
    CHAR            shift and go to state 54
    -               shift and go to state 50
    NAME            shift and go to state 27

    expressao                      shift and go to state 63
    name                           shift and go to state 55

state 49

    (19) comando_se -> SE ( expressao . ) { comando } senao
    (24) expressao -> expressao . + expressao
    (25) expressao -> expressao . - expressao
    (26) expressao -> expressao . * expressao
    (27) expressao -> expressao . / expressao
    (28) expressao -> expressao . > expressao
    (29) expressao -> expressao . < expressao
    (30) expressao -> expressao . IGUAL expressao
    (31) expressao -> expressao . MAIORIGUAL expressao
    (32) expressao -> expressao . MENORIGUAL expressao
    (33) expressao -> expressao . DIFERENTE expressao
    (34) expressao -> expressao . ELOGICO expressao
    (35) expressao -> expressao . OULOGICO expressao

    )               shift and go to state 64
    +               shift and go to state 65
    -               shift and go to state 66
    *               shift and go to state 67
    /               shift and go to state 68
    >               shift and go to state 69
    <               shift and go to state 70
    IGUAL           shift and go to state 71
    MAIORIGUAL      shift and go to state 72
    MENORIGUAL      shift and go to state 73
    DIFERENTE       shift and go to state 74
    ELOGICO         shift and go to state 75
    OULOGICO        shift and go to state 76


state 50

    (42) expressao -> - . expressao
    (24) expressao -> . expressao + expressao
    (25) expressao -> . expressao - expressao
    (26) expressao -> . expressao * expressao
    (27) expressao -> . expressao / expressao
    (28) expressao -> . expressao > expressao
    (29) expressao -> . expressao < expressao
    (30) expressao -> . expressao IGUAL expressao
    (31) expressao -> . expressao MAIORIGUAL expressao
    (32) expressao -> . expressao MENORIGUAL expressao
    (33) expressao -> . expressao DIFERENTE expressao
    (34) expressao -> . expressao ELOGICO expressao
    (35) expressao -> . expressao OULOGICO expressao
    (36) expressao -> . ( expressao )
    (37) expressao -> . ! expressao
    (38) expressao -> . INTEIRO
    (39) expressao -> . REAL
    (40) expressao -> . CHAR
    (41) expressao -> . name
    (42) expressao -> . - expressao
    (43) name -> . NAME

    (               shift and go to state 48
    !               shift and go to state 51
    INTEIRO         shift and go to state 52
    REAL            shift and go to state 53
    CHAR            shift and go to state 54
    -               shift and go to state 50
    NAME            shift and go to state 27

    expressao                      shift and go to state 77
    name                           shift and go to state 55

state 51

    (37) expressao -> ! . expressao
    (24) expressao -> . expressao + expressao
    (25) expressao -> . expressao - expressao
    (26) expressao -> . expressao * expressao
    (27) expressao -> . expressao / expressao
    (28) expressao -> . expressao > expressao
    (29) expressao -> . expressao < expressao
    (30) expressao -> . expressao IGUAL expressao
    (31) expressao -> . expressao MAIORIGUAL expressao
    (32) expressao -> . expressao MENORIGUAL expressao
    (33) expressao -> . expressao DIFERENTE expressao
    (34) expressao -> . expressao ELOGICO expressao
    (35) expressao -> . expressao OULOGICO expressao
    (36) expressao -> . ( expressao )
    (37) expressao -> . ! expressao
    (38) expressao -> . INTEIRO
    (39) expressao -> . REAL
    (40) expressao -> . CHAR
    (41) expressao -> . name
    (42) expressao -> . - expressao
    (43) name -> . NAME

    (               shift and go to state 48
    !               shift and go to state 51
    INTEIRO         shift and go to state 52
    REAL            shift and go to state 53
    CHAR            shift and go to state 54
    -               shift and go to state 50
    NAME            shift and go to state 27

    expressao                      shift and go to state 78
    name                           shift and go to state 55

state 52

    (38) expressao -> INTEIRO .

    )               reduce using rule 38 (expressao -> INTEIRO .)
    +               reduce using rule 38 (expressao -> INTEIRO .)
    -               reduce using rule 38 (expressao -> INTEIRO .)
    *               reduce using rule 38 (expressao -> INTEIRO .)
    /               reduce using rule 38 (expressao -> INTEIRO .)
    >               reduce using rule 38 (expressao -> INTEIRO .)
    <               reduce using rule 38 (expressao -> INTEIRO .)
    IGUAL           reduce using rule 38 (expressao -> INTEIRO .)
    MAIORIGUAL      reduce using rule 38 (expressao -> INTEIRO .)
    MENORIGUAL      reduce using rule 38 (expressao -> INTEIRO .)
    DIFERENTE       reduce using rule 38 (expressao -> INTEIRO .)
    ELOGICO         reduce using rule 38 (expressao -> INTEIRO .)
    OULOGICO        reduce using rule 38 (expressao -> INTEIRO .)
    ;               reduce using rule 38 (expressao -> INTEIRO .)


state 53

    (39) expressao -> REAL .

    )               reduce using rule 39 (expressao -> REAL .)
    +               reduce using rule 39 (expressao -> REAL .)
    -               reduce using rule 39 (expressao -> REAL .)
    *               reduce using rule 39 (expressao -> REAL .)
    /               reduce using rule 39 (expressao -> REAL .)
    >               reduce using rule 39 (expressao -> REAL .)
    <               reduce using rule 39 (expressao -> REAL .)
    IGUAL           reduce using rule 39 (expressao -> REAL .)
    MAIORIGUAL      reduce using rule 39 (expressao -> REAL .)
    MENORIGUAL      reduce using rule 39 (expressao -> REAL .)
    DIFERENTE       reduce using rule 39 (expressao -> REAL .)
    ELOGICO         reduce using rule 39 (expressao -> REAL .)
    OULOGICO        reduce using rule 39 (expressao -> REAL .)
    ;               reduce using rule 39 (expressao -> REAL .)


state 54

    (40) expressao -> CHAR .

    )               reduce using rule 40 (expressao -> CHAR .)
    +               reduce using rule 40 (expressao -> CHAR .)
    -               reduce using rule 40 (expressao -> CHAR .)
    *               reduce using rule 40 (expressao -> CHAR .)
    /               reduce using rule 40 (expressao -> CHAR .)
    >               reduce using rule 40 (expressao -> CHAR .)
    <               reduce using rule 40 (expressao -> CHAR .)
    IGUAL           reduce using rule 40 (expressao -> CHAR .)
    MAIORIGUAL      reduce using rule 40 (expressao -> CHAR .)
    MENORIGUAL      reduce using rule 40 (expressao -> CHAR .)
    DIFERENTE       reduce using rule 40 (expressao -> CHAR .)
    ELOGICO         reduce using rule 40 (expressao -> CHAR .)
    OULOGICO        reduce using rule 40 (expressao -> CHAR .)
    ;               reduce using rule 40 (expressao -> CHAR .)


state 55

    (41) expressao -> name .

    )               reduce using rule 41 (expressao -> name .)
    +               reduce using rule 41 (expressao -> name .)
    -               reduce using rule 41 (expressao -> name .)
    *               reduce using rule 41 (expressao -> name .)
    /               reduce using rule 41 (expressao -> name .)
    >               reduce using rule 41 (expressao -> name .)
    <               reduce using rule 41 (expressao -> name .)
    IGUAL           reduce using rule 41 (expressao -> name .)
    MAIORIGUAL      reduce using rule 41 (expressao -> name .)
    MENORIGUAL      reduce using rule 41 (expressao -> name .)
    DIFERENTE       reduce using rule 41 (expressao -> name .)
    ELOGICO         reduce using rule 41 (expressao -> name .)
    OULOGICO        reduce using rule 41 (expressao -> name .)
    ;               reduce using rule 41 (expressao -> name .)


state 56
